<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/appWidget"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/list_item"
             android:elevation="4dp"
             android:orientation="vertical"
             android:backgroundTint="#70ffffff">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:orientation="vertical"
        android:layout_margin="6dp"
        android:background="@color/blue01">

        <TextView
            android:id="@+id/widgetTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20dp"
            android:contentDescription="@string/home_team"
            android:textColor="@color/white"/>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginBottom="6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="5dp"
            android:background="#ffffffff">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/home_crest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/home_crest"
                    android:src="@drawable/no_icon"
                    />

                <TextView
                    android:id="@+id/home_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textSize="@dimen/TeamWidget"
                    android:contentDescription="@string/home_team"
                    android:textColor="@color/blue01"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/score_textview"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:contentDescription="@string/today_score"
                    android:gravity="center"
                    android:text="2 - 0"
                    android:textSize="@dimen/ScoreWidget"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/data_textview"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:contentDescription="@string/match_time"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:textColor="@color/black"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/away_crest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/away_crest"
                    android:src="@drawable/no_icon"/>

                <TextView
                    android:id="@+id/away_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/away_team"
                    android:gravity="center"
                    android:textSize="@dimen/TeamWidget"
                    android:textColor="@color/red01"/>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

</FrameLayout>